--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -149,7 +149,7 @@ input, select, textarea {
 		font-style: italic;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h2, h3, h4, h5, h6 {
 		color: #000;
 		margin: 0 0 0.75em 0;
 	}
