--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,6 +171,7 @@ input, select, textarea {
 
 		h1 strong {
 			font-weight: 700;
+			color: #fff;
 		}
 
 	h2 {
@@ -2122,6 +2123,7 @@ input, select, textarea {
 
 		#top h1 {
 			margin-top: 0.35em;
+			color: #fff;
 		}
 
 		#top p {
