--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1988,7 +1988,7 @@ input, select, textarea {
 /* Wrappers */
 
 	.wrapper {
-		background-image: none;
+		background-image: shorthand-the-craft-interactive-maps-amazon-map-background-texture-2-2560x1440.jpg;
 		box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.05), inset 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
 		padding: 8em 0 8em 0;
 		text-align: center;
